little fix on mobile

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -503,6 +503,7 @@ body.modal-open {
         margin: 0px -15px !important;
         padding-left: 15px;
         padding-right: 15px;
+        word-break:break-all;
     }
     .main, .content, .wrap {
         padding: 0px !important;
@@ -816,6 +817,7 @@ ul.xagithub li em {
         font-size: 36px;
         margin: 10px -15px;
         text-shadow: 0px 1px 1px rgb(0, 0, 0);
+        padding:0;
     }
     ul {
         padding-left: 10px;
@@ -935,6 +937,14 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     .menu a {
         padding-left:6px !important;
         padding-right:6px !important;
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .addthis_toolbox {
+        height: 50px;
     }
 
 }
